--- a/.github/workflows/AutoPatcher.yml
+++ b/.github/workflows/AutoPatcher.yml
@@ -90,11 +90,48 @@ jobs:
           node -e "const fs = require('fs'); \
             const filePath = 'extracted/app-64/resources/temp/assets/main/main.js'; \
             let content = fs.readFileSync(filePath, 'utf8'); \
-            const target = '(t.subscriptions||[]).reduce((function(e,t){return t.expiry_at&&1e3*t.expiry_at>Date.now()&&(e=r(r([],e,!0),t.features||[],!0)),e}),[])'; \
-            const replacement = JSON.stringify(['ad_free','premium_badge','lol_mypage','lol_favorites','lol_auto_record','lol_super_renew','tft_mypage','val_mypage','duo_pull_up','duo_highlight']); \
-            content = content.replace(target, replacement); \
-            fs.writeFileSync(filePath, content);"
+            const target = 'var o=function\\(\\){var e;try{var t=m.get\\(\"_ot_v2_member\"\\)\\|\\|{};return{mid:t.mid\\?parseInt\\(t.mid\\):null,email:null!==\\(e=t.email\\)&&void 0!==e\\?e:null,nickname:t.nick,subscriptions:t.subscriptions\\|\\|\\[\\],features:\\(t.subscriptions\\|\\|\\[\\]\\).reduce\\(\\(function\\(e,t\\){return t.expiry_at&&1e3\\*t.expiry_at>Date.now\\(\\)&&\\(e=r\\(r\\(\\[\\],e,!0\\),t.features\\|\\|\\[\\],!0\\)\\),e}\\),\\[\\]\\)}}catch\\(e\\){console.log\\(e\\)}return{mid:null,email:null,nickname:null,subscriptions:\\[\\],features:\\[\\]}\\}\\(\\);'; \
+            const replacement = 'var o={mid:4396,email:\"HideOnBush\",nickname:\"JieJie\",subscriptions:[\"premium\"],features:[\"ad_free\",\"premium_badge\",\"lol_mypage\",\"lol_favorites\",\"lol_auto_record\",\"lol_super_renew\",\"tft_mypage\",\"val_mypage\",\"duo_pull_up\",\"duo_highlight\"]};'; \
+            const regex = new RegExp(target); \
+            if (content.match(regex)) { \
+              console.log('Found! Replacing...'); \
+              content = content.replace(regex, replacement); \
+              fs.writeFileSync(filePath, content); \
+              console.log('Patched!'); \
+            } else { \
+              console.error('User info not found!'); \
+            }"
 
+          node -e "const fs = require('fs'); \
+            const filePath = 'extracted/app-64/resources/temp/assets/main/main.js'; \
+            let content = fs.readFileSync(filePath, 'utf8'); \
+            const target = 'function w\\(\\){m\\.delete\\(\"_ot\"\\),m\\.delete\\(\"_ot_member\"\\),m\\.delete\\(\"_ot_v2_refresh\"\\),m\\.delete\\(\"_ot_v2_refresh_at\"\\),m\\.delete\\(\"_ot_v2_member\"\\),m\\.delete\\(\"_ot_v2_member_game_profile\"\\),m\\.delete\\(\"_ot_guest\"\\),I\\.delete\\(\"member\"\\),b\\(\"logout\",\\{opgg:!1,opggId:null\\}\\),S\\(\\)}'; \
+            const replacement = 'function w(){/*m.delete(\"_ot\"),m.delete(\"_ot_member\"),m.delete(\"_ot_v2_refresh\"),m.delete(\"_ot_v2_refresh_at\"),m.delete(\"_ot_v2_member\"),m.delete(\"_ot_v2_member_game_profile\"),m.delete(\"_ot_guest\"),I.delete(\"member\"),b(\"logout\",{opgg:!1,opggId:null}),S()*/}'; \
+            const regex = new RegExp(target); \
+            if (content.match(regex)) { \
+              console.log('Logout Found, Patching...'); \
+              content = content.replace(regex, replacement); \
+              fs.writeFileSync(filePath, content); \
+              console.log('Patched!'); \
+            } else { \
+              console.error('Logout not found!'); \
+            }"
+
+          node -e "const fs = require('fs'); \
+            const filePath = 'extracted/app-64/resources/temp/assets/main/main.js'; \
+            let content = fs.readFileSync(filePath, 'utf8'); \
+            const target = 'g.whenReady\\(\\).then\\(\\(function\\(\\){\\(f\\|\\|H\\(\\)\\)&&E\\(\\)}\\)\\)'; \
+            const replacement = 'g.whenReady().then((function(){(f||H())&&E();var faker={mid:4396,email:\"HideOnBush\",nick:\"JieJie\",subscriptions:[\"premium\"]};m.set(\"_ot_v2_member\",faker);I.set(\"member\",{mid:faker.mid,email:faker.email,nickname:faker.nick,subscriptions:faker.subscriptions,features:[\"ad_free\",\"premium_badge\",\"lol_mypage\",\"lol_favorites\",\"lol_auto_record\",\"lol_super_renew\",\"tft_mypage\",\"val_mypage\",\"duo_pull_up\",\"duo_highlight\"]});I.set(\"guest\",!1);S()}))'; \
+            const regex = new RegExp(target); \
+            if (content.match(regex)) { \
+              console.log('Found boot part, Patching...'); \
+              content = content.replace(regex, replacement); \
+              fs.writeFileSync(filePath, content); \
+              console.log('Patched!'); \
+            } else { \
+              console.error('Boot part not found'); \
+            }"
+            
       - name: Repack app.asar
         working-directory: extracted/app-64/resources
         run: npx asar pack temp app.asar
