--- a/.github/workflows/AutoPatcher.yml
+++ b/.github/workflows/AutoPatcher.yml
@@ -119,3 +119,8 @@ jobs:
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: extracted/OP.GG-Patched.zip
+          asset_name: OP.GG-Patched.zip
+          asset_content_type: application/zip
