--- a/.github/workflows/AutoPatcher.yml
+++ b/.github/workflows/AutoPatcher.yml
@@ -2,7 +2,7 @@ name: Auto Patch and Release
 
 on:
   schedule:
-    - cron: '0 0 * * *'
+    - cron: "0 0 * * *"
   workflow_dispatch:
 
 jobs:
@@ -16,11 +16,23 @@ jobs:
         id: get_version
         run: |
           timestamp=$(date +%s%3N)
-          version=$(curl -s "https://desktop-app-data.op.gg/app/i18n/v2/versions.json?v=${timestamp}" | jq -r '.en')
-          echo "Latest version from API: $version"
-          echo "new_version=$version" >> $GITHUB_OUTPUT
+          # Fetch timestamp version
+          raw_version=$(curl -s "https://desktop-app-data.op.gg/app/i18n/v2/versions.json?v=${timestamp}" | jq -r '.en')
+          echo "Raw version from API: $raw_version"
 
-      - name: Get last release tag (with fallback)
+          # Convert to readable date (raw_version is ms)
+          seconds=$(echo $raw_version | cut -c1-10)
+          formatted_date=$(date -d @$seconds +"%Y-%m-%d %H:%M")
+          tag_name=$(date -d @$seconds +"%Y-%m-%d_%H-%M")
+
+          echo "Formatted Date: $formatted_date"
+          echo "Generated Tag: $tag_name"
+
+          echo "raw_version=$raw_version" >> $GITHUB_OUTPUT
+          echo "formatted_date=$formatted_date" >> $GITHUB_OUTPUT
+          echo "tag_name=$tag_name" >> $GITHUB_OUTPUT
+
+      - name: Get last release tag
         id: get_release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -33,15 +45,16 @@ jobs:
         id: check
         run: |
           force="${{ github.event.inputs.force_patch }}"
+          new_tag="${{ steps.get_version.outputs.tag_name }}"
+          last_tag="${{ steps.get_release.outputs.last_tag }}"
+
           if [ "$force" == "true" ]; then
             echo "Force patch enabled."
             echo "should_patch=true" >> $GITHUB_OUTPUT
           else
-            new_version="${{ steps.get_version.outputs.new_version }}"
-            last_tag="${{ steps.get_release.outputs.last_tag }}"
-            echo "New version: $new_version"
-            echo "Last tag: $last_tag"
-            if [ "$new_version" != "$last_tag" ]; then
+            echo "New Tag: $new_tag"
+            echo "Last Tag: $last_tag"
+            if [ "$new_tag" != "$last_tag" ]; then
               echo "New version detected."
               echo "should_patch=true" >> $GITHUB_OUTPUT
             else
@@ -49,16 +62,16 @@ jobs:
               echo "should_patch=false" >> $GITHUB_OUTPUT
             fi
           fi
-          echo "new_version=${{ steps.get_version.outputs.new_version }}" >> $GITHUB_OUTPUT
-
+          echo "new_version=${{ steps.get_version.outputs.formatted_date }}" >> $GITHUB_OUTPUT
+          echo "new_tag=${{ steps.get_version.outputs.tag_name }}" >> $GITHUB_OUTPUT
 
   patch_and_release:
     needs: check_new_version
     if: ${{ needs.check_new_version.outputs.should_patch == 'true' }}
     runs-on: ubuntu-latest
     env:
-      PLUGINSDIR: '$PLUGINSDIR'
-      R0: '$R0'
+      PLUGINSDIR: "$PLUGINSDIR"
+      R0: "$R0"
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -66,7 +79,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '16'
+          node-version: "16"
 
       - name: Install dependencies
         run: sudo apt-get update && sudo apt-get install -y p7zip-full zip
@@ -81,28 +94,64 @@ jobs:
         run: |
           7z x "extracted/${PLUGINSDIR}/app-64.7z" -o"extracted/app-64"
 
-      - name: Extract asar
+      - name: Extract asar for patching
         working-directory: extracted/app-64/resources
-        run: npx asar extract app.asar temp
+        run: |
+          npx asar extract app.asar temp_nologin
+          npx asar extract app.asar temp_login
 
-      - name: Download and Run patch script
+      - name: Apply No-Login Patch (Regex)
         run: |
           curl -L https://raw.githubusercontent.com/Lv-Max/OP-GG-Client-AD-Patch/main/patch.js -o patch.js
+          # Modify patch.js to target temp_nologin
+          sed -i 's|extracted/app-64/resources/temp/assets/main/main.js|extracted/app-64/resources/temp_nologin/assets/main/main.js|g' patch.js
           node patch.js
-            
-      - name: Repack app.asar
-        working-directory: extracted/app-64/resources
-        run: npx asar pack temp app.asar
 
-      - name: Delete temp folder to save space
-        working-directory: extracted/app-64/resources
-        run: rm -rf temp
+      - name: Apply Login Patch (Hook)
+        run: |
+          curl -L https://raw.githubusercontent.com/Lv-Max/OP-GG-Client-AD-Patch/main/hook.js -o hook.js
+          mkdir -p extracted/app-64/resources/temp_login/assets/main
+          cp hook.js extracted/app-64/resources/temp_login/assets/main/hook.js
+          # Modify package.json to point to hook.js
+          sed -i 's|"main": "assets/main/main.js"|"main": "assets/main/hook.js"|g' extracted/app-64/resources/temp_login/package.json
 
-      - name: Zip app-64
+      - name: Repack app.asar (No-Login)
+        working-directory: extracted/app-64/resources
+        run: npx asar pack temp_nologin app-nologin.asar
+
+      - name: Repack app.asar (Login)
+        working-directory: extracted/app-64/resources
+        run: npx asar pack temp_login app-login.asar
+
+      - name: Delete temp folders
+        working-directory: extracted/app-64/resources
+        run: rm -rf temp_nologin temp_login
+
+      - name: Create ZIPs
         run: |
           cd extracted
-          zip -r OP.GG-Patched.zip app-64
-          cd ..
+
+          # Prepare No-Login Zip
+          mv app-64/resources/app-nologin.asar app-64/resources/app.asar
+          rm -f app-64/resources/app-login.asar
+          zip -r OP.GG-NoLogin-Patched.zip app-64
+
+          # Prepare Login Zip
+          mv app-64/resources/app.asar app-64/resources/app-nologin.asar # stash it back
+
+          cp app-64/resources/app-nologin.asar app-64/resources/app.asar
+          zip -r OP.GG-NoLogin-Patched.zip app-64
+
+          # Bundle Login
+          cp app-64/resources/app-login.asar app-64/resources/app.asar
+          zip -r OP.GG-Login-Patched.zip app-64
+
+      - name: Delete Old Releases
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          echo "Deleting all previous releases..."
+          gh release list --limit 100 --json tagName -q '.[].tagName' | xargs -I {} gh release delete {} --cleanup-tag -y || true
 
       - name: Create GitHub Release
         id: create_release
@@ -110,17 +159,27 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ needs.check_new_version.outputs.new_version }}
+          tag_name: ${{ needs.check_new_version.outputs.new_tag }}
           release_name: "Patch for version ${{ needs.check_new_version.outputs.new_version }}"
           draft: false
           prerelease: false
 
-      - name: Upload release asset
+      - name: Upload No-Login Asset
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: extracted/OP.GG-Patched.zip
-          asset_name: OP.GG-Patched.zip
+          asset_path: extracted/OP.GG-NoLogin-Patched.zip
+          asset_name: OP.GG-NoLogin-Patched.zip
+          asset_content_type: application/zip
+
+      - name: Upload Login Asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: extracted/OP.GG-Login-Patched.zip
+          asset_name: OP.GG-Login-Patched.zip
           asset_content_type: application/zip
